[tool.poetry]
name = "leetcode"
version = "0.1.0"
description = "project for SE setup CI"
authors = ["louisbank <156777035+louisbank-edu-thailand@users.noreply.github.com>"]
#readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
